Added downloader and file system manager
Added downloader and file system manager

--- a/src/LuKaSo.MarketData.Types/LuKaSo.MarketData.Types.csproj
+++ b/src/LuKaSo.MarketData.Types/LuKaSo.MarketData.Types.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\LuKaSo.MarketData.Common\LuKaSo.MarketData.Common.csproj" />
+    <ProjectReference Include="..\LuKaSo.MarketData.Infrastructure\LuKaSo.MarketData.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
