--- a/src/LuKaSo.MarketData.Common/LuKaSo.MarketData.Common.csproj
+++ b/src/LuKaSo.MarketData.Common/LuKaSo.MarketData.Common.csproj
@@ -4,4 +4,12 @@
     <TargetFramework>netcoreapp2.2</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="2.2.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\LuKaSo.MarketData.Infrastructure\LuKaSo.MarketData.Infrastructure.csproj" />
+  </ItemGroup>
+
 </Project>
