--- a/src/LuKaSo.MarketData.Ducascopy/LuKaSo.MarketData.Ducascopy.csproj
+++ b/src/LuKaSo.MarketData.Ducascopy/LuKaSo.MarketData.Ducascopy.csproj
@@ -16,16 +16,14 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="2.2.0" />
+    <PackageReference Include="morelinq" Version="3.1.0" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\LuKaSo.MarketData.Common\LuKaSo.MarketData.Common.csproj" />
     <ProjectReference Include="..\LuKaSo.MarketData.Infrastructure\LuKaSo.MarketData.Infrastructure.csproj" />
     <ProjectReference Include="..\LuKaSo.MarketData.Types\LuKaSo.MarketData.Types.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Downloader\FileSystem\" />
   </ItemGroup>
 
 </Project>
