--- a/src/LuKaSo.MarketData.Ducascopy/LuKaSo.MarketData.Ducascopy.csproj
+++ b/src/LuKaSo.MarketData.Ducascopy/LuKaSo.MarketData.Ducascopy.csproj
@@ -15,6 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="2.2.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="2.2.0" />
     <PackageReference Include="morelinq" Version="3.1.0" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
